# axonedb

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md  deny.toml
.github/workflows/: ci.yml
crates/admin/: Cargo.toml
crates/admin/src/: lib.rs
crates/cdc/: Cargo.toml
crates/cdc/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/engine/: kv_store.rs  mod.rs
crates/core/src/models/: mod.rs  ttl.rs  value.rs
crates/core/tests/: kv_store.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/raft/: Cargo.toml
crates/raft/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  snapshot.rs  wal.rs
crates/storage/tests/: snapshot.rs  storage.rs  wal.rs
docs/adr/: ADR-0001-acceleration-with-vulkan.md
docs/architecture/: ARCHITECTURE.md
docs/en/: architecture.md  getting_started.md  glossary.md  introduction.md
docs/fr/: architecture.md  getting_started.md  glossary.md  introduction.md
docs/roadmap/: ROADMAP.md
docs/specs/: query-planner.md
docs/specs/acceleration/: vulkan.md
sdk/dotnet/: README.md
sdk/go/: README.md
sdk/rust/: README.md
sdk/ts/: README.md
tools/bench/: Cargo.toml
tools/bench/src/: main.rs
tools/cli/: Cargo.toml
tools/cli/src/: main.rs
