[package]
name = "axonedb-storage"
version = "0.1.0"
edition = "2021"
description = "AxoneDB storage crate."
license = "Apache-2.0"

[lib]
path = "src/lib.rs"

[dependencies]
axonedb-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
tempfile = "3.8"
